@@ -280,6 +280,6 @@ const bfd_target aix386_core_vec =
      BFD_JUMP_TABLE_DYNAMIC (_bfd_nodynamic),
 
     NULL,
-    
+
     (PTR) 0
 };
