@@ -23,7 +23,6 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
 SECTION
 	a.out backends
 
-
 DESCRIPTION
 
 	BFD supports a number of different flavours of a.out format,
@@ -363,7 +362,7 @@ NAME(aout,swap_exec_header_in) (abfd, raw_bytes, execp)
   /* The internal_exec structure has some fields that are unused in this
      configuration (IE for i960), so ensure that all such uninitialized
      fields are zero'd out.  There are places where two of these structs
-     are memcmp'd, and thus the contents do matter. */
+     are memcmp'd, and thus the contents do matter.  */
   memset ((PTR) execp, 0, sizeof (struct internal_exec));
   /* Now fill in fields in the execp, from the bytes in the raw data.  */
   execp->a_info   = bfd_h_get_32 (abfd, bytes->e_info);
@@ -400,7 +399,7 @@ NAME(aout,swap_exec_header_out) (abfd, execp, raw_bytes)
 {
   struct external_exec *bytes = (struct external_exec *)raw_bytes;
 
-  /* Now fill in fields in the raw data, from the fields in the exec struct. */
+  /* Now fill in fields in the raw data, from the fields in the exec struct.  */
   bfd_h_put_32 (abfd, execp->a_info  , bytes->e_info);
   PUT_WORD (abfd, execp->a_text  , bytes->e_text);
   PUT_WORD (abfd, execp->a_data  , bytes->e_data);
@@ -517,7 +516,7 @@ NAME(aout,some_aout_object_p) (abfd, execp, callback_to_real_object_p)
   /* The default relocation entry size is that of traditional V7 Unix.  */
   obj_reloc_entry_size (abfd) = RELOC_STD_SIZE;
 
-  /* The default symbol entry size is that of traditional Unix. */
+  /* The default symbol entry size is that of traditional Unix.  */
   obj_symbol_entry_size (abfd) = EXTERNAL_NLIST_SIZE;
 
 #ifdef USE_MMAP
@@ -616,7 +615,7 @@ NAME(aout,some_aout_object_p) (abfd, execp, callback_to_real_object_p)
 
      To fix this, we now accept any non-zero entry point as an indication of
      executability.  This will work most of the time, since only the linker
-     sets the entry point, and that is likely to be non-zero for most systems. */
+     sets the entry point, and that is likely to be non-zero for most systems.  */
 
   if (execp->a_entry != 0
       || (execp->a_entry >= obj_textsec(abfd)->vma
@@ -693,7 +692,6 @@ NAME(aout,mkobject) (abfd)
   return true;
 }
 
-
 /*
 FUNCTION
 	aout_@var{size}_machine_type
@@ -757,7 +755,7 @@ NAME(aout,machine_type) (arch, machine, unknown)
   case bfd_arch_arm:
     if (machine == 0)	arch_flags = M_ARM;
     break;
-    
+
   case bfd_arch_mips:
     switch (machine) {
     case 0:
@@ -813,7 +811,6 @@ NAME(aout,machine_type) (arch, machine, unknown)
 
   return arch_flags;
 }
-
 
 /*
 FUNCTION
@@ -941,7 +938,7 @@ adjust_z_magic (abfd, execp)
   file_ptr text_end;
   CONST struct aout_backend_data *abdp;
   int ztih;			/* Nonzero if text includes exec header.  */
-  
+
   abdp = aout_backend_info (abfd);
 
   /* Text.  */
@@ -1009,7 +1006,7 @@ adjust_z_magic (abfd, execp)
     }
   obj_datasec(abfd)->filepos = (obj_textsec(abfd)->filepos
 				+ obj_textsec(abfd)->_raw_size);
-  
+
   /* Fix up exec header while we're at it.  */
   execp->a_text = obj_textsec(abfd)->_raw_size;
   if (ztih && (!abdp || (abdp && !abdp->exec_header_not_counted)))
@@ -1054,7 +1051,7 @@ adjust_n_magic (abfd, execp)
   file_ptr pos = adata(abfd).exec_bytes_size;
   bfd_vma vma = 0;
   int pad;
-  
+
   /* Text.  */
   obj_textsec(abfd)->filepos = pos;
   if (!obj_textsec(abfd)->user_set_vma)
@@ -1069,7 +1066,7 @@ adjust_n_magic (abfd, execp)
   if (!obj_datasec(abfd)->user_set_vma)
     obj_datasec(abfd)->vma = BFD_ALIGN (vma, adata(abfd).segment_size);
   vma = obj_datasec(abfd)->vma;
-  
+
   /* Since BSS follows data immediately, see if it needs alignment.  */
   vma += obj_datasec(abfd)->_raw_size;
   pad = align_power (vma, obj_bsssec(abfd)->alignment_power) - vma;
@@ -1114,7 +1111,7 @@ NAME(aout,adjust_sizes_and_vmas) (abfd, text_size, text_end)
      (TARGET_PAGE_SIZE).  However, newer versions of SUNOS start the text
      segment right after the exec header; the latter is counted in the
      text segment size, and is paged in by the kernel with the rest of
-     the text. */
+     the text.  */
 
   /* This perhaps isn't the right way to do this, but made it simpler for me
      to understand enough to implement it.  Better would probably be to go
@@ -1200,7 +1197,6 @@ NAME(aout,new_section_hook) (abfd, newsect)
 {
   /* align to double at least */
   newsect->alignment_power = bfd_get_arch_info(abfd)->section_align_power;
-
 
   if (bfd_get_format (abfd) == bfd_object)
   {
@@ -1311,7 +1307,7 @@ aout_get_external_symbols (abfd)
       obj_aout_external_syms (abfd) = syms;
       obj_aout_external_sym_count (abfd) = count;
     }
-      
+
   if (obj_aout_external_strings (abfd) == NULL
       && exec_hdr (abfd)->a_syms != 0)
     {
@@ -1640,7 +1636,7 @@ translate_to_native_sym_flags (abfd, cache_ptr, sym_pointer)
 	 file.  */
       (*_bfd_error_handler)
 	(_("%s: can not represent section for symbol `%s' in a.out object file format"),
-	 bfd_get_filename (abfd), 
+	 bfd_get_filename (abfd),
 	 cache_ptr->name != NULL ? cache_ptr->name : _("*unknown*"));
       bfd_set_error (bfd_error_nonrepresentable_section);
       return false;
@@ -1722,7 +1718,7 @@ translate_to_native_sym_flags (abfd, cache_ptr, sym_pointer)
   return true;
 }
 
-/* Native-level interface to symbols. */
+/* Native-level interface to symbols.  */
 
 asymbol *
 NAME(aout,make_empty_symbol) (abfd)
@@ -1789,7 +1785,7 @@ NAME(aout,translate_symbol_table) (abfd, in, ext, count, str, strsize, dynamic)
 
 /* We read the symbols into a buffer, which is discarded when this
    function exits.  We read the strings into a buffer large enough to
-   hold them all plus all the cached symbol entries. */
+   hold them all plus all the cached symbol entries.  */
 
 boolean
 NAME(aout,slurp_symbol_table) (abfd)
@@ -1997,7 +1993,7 @@ NAME(aout,get_symtab) (abfd, location)
 
 
 /* Standard reloc stuff */
-/* Output standard relocation information to a file in target byte order. */
+/* Output standard relocation information to a file in target byte order.  */
 
 extern void  NAME(aout,swap_std_reloc_out)
   PARAMS ((bfd *, arelent *, struct reloc_std_external *));
@@ -2039,7 +2035,6 @@ NAME(aout,swap_std_reloc_out) (abfd, g, natptr)
      from the abs section, or as a symbol which has an abs value.
      check for that here
      */
-
 
   if (bfd_is_com_section (output_section)
       || bfd_is_abs_section (output_section)
@@ -2093,9 +2088,8 @@ NAME(aout,swap_std_reloc_out) (abfd, g, natptr)
       }
 }
 
-
 /* Extended stuff */
-/* Output extended relocation information to a file in target byte order. */
+/* Output extended relocation information to a file in target byte order.  */
 
 extern void NAME(aout,swap_ext_reloc_out)
   PARAMS ((bfd *, arelent *, struct reloc_ext_external *));
@@ -2176,7 +2170,6 @@ NAME(aout,swap_ext_reloc_out) (abfd, g, natptr)
    Aout keeps all it's symbols based from zero, so the symbol would
    contain 60. This macro subs the base of each section from the value
    to give the true offset from the section */
-
 
 #define MOVE_ADDRESS(ad)       						\
   if (r_extern) {							\
@@ -2552,7 +2545,6 @@ NAME(aout,get_symtab_upper_bound) (abfd)
   return (bfd_get_symcount (abfd)+1) * (sizeof (aout_symbol_type *));
 }
 
-/*ARGSUSED*/
  alent *
 NAME(aout,get_lineno) (ignore_abfd, ignore_symbol)
      bfd *ignore_abfd ATTRIBUTE_UNUSED;
@@ -2561,7 +2553,6 @@ NAME(aout,get_lineno) (ignore_abfd, ignore_symbol)
   return (alent *)NULL;
 }
 
-/*ARGSUSED*/
 void
 NAME(aout,get_symbol_info) (ignore_abfd, symbol, ret)
      bfd *ignore_abfd ATTRIBUTE_UNUSED;
@@ -2589,7 +2580,6 @@ NAME(aout,get_symbol_info) (ignore_abfd, symbol, ret)
     }
 }
 
-/*ARGSUSED*/
 void
 NAME(aout,print_symbol) (ignore_abfd, afile, symbol, how)
      bfd *ignore_abfd ATTRIBUTE_UNUSED;
@@ -2612,7 +2602,6 @@ NAME(aout,print_symbol) (ignore_abfd, afile, symbol, how)
   case bfd_print_symbol_all:
     {
    CONST char *section_name = symbol->section->name;
-
 
       bfd_print_symbol_vandf((PTR)file,symbol);
 
@@ -2722,8 +2711,8 @@ NAME(aout,find_nearest_line)
   CONST char *directory_name = NULL;
   CONST char *main_file_name = NULL;
   CONST char *current_file_name = NULL;
-  CONST char *line_file_name = NULL; /* Value of current_file_name at line number. */
-  CONST char *line_directory_name = NULL; /* Value of directory_name at line number. */
+  CONST char *line_file_name = NULL; /* Value of current_file_name at line number.  */
+  CONST char *line_directory_name = NULL; /* Value of directory_name at line number.  */
   bfd_vma low_line_vma = 0;
   bfd_vma low_func_vma = 0;
   asymbol *func = 0;
@@ -2782,7 +2771,7 @@ NAME(aout,find_nearest_line)
 	  }
 
 	main_file_name = current_file_name = q->symbol.name;
-	/* Look ahead to next symbol to check if that too is an N_SO. */
+	/* Look ahead to next symbol to check if that too is an N_SO.  */
 	p++;
 	if (*p == NULL)
 	  break;
@@ -2790,7 +2779,7 @@ NAME(aout,find_nearest_line)
 	if (q->type != (int)N_SO)
 	  goto next;
 
-	/* Found a second N_SO  First is directory; second is filename. */
+	/* Found a second N_SO  First is directory; second is filename.  */
 	directory_name = current_file_name;
 	main_file_name = current_file_name = q->symbol.name;
 	if (obj_textsec(abfd) != section)
@@ -2898,7 +2887,6 @@ NAME(aout,find_nearest_line)
   return true;
 }
 
-/*ARGSUSED*/
 int
 NAME(aout,sizeof_headers) (abfd, execable)
      bfd *abfd;
@@ -4142,7 +4130,7 @@ aout_link_write_symbols (finfo, input_bfd)
 	  /* We have saved the hash table entry for this symbol, if
 	     there is one.  Note that we could just look it up again
 	     in the hash table, provided we first check that it is an
-	     external symbol. */
+	     external symbol.  */
 	  h = *sym_hash;
 
 	  /* Use the name from the hash table, in case the symbol was
@@ -4806,7 +4794,7 @@ aout_link_input_section_std (finfo, input_bfd, input_section, relocs,
 
 #ifdef MY_reloc_howto
       howto = MY_reloc_howto(input_bfd, rel, r_index, r_extern, r_pcrel);
-#else      
+#else
       {
 	int r_jmptable;
 	int r_relative;
